--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
-  margin: 0;
+  margin: 10px 10px 0 10px;
+  padding: 0;
+  background-color: rgba(0, 0, 0, 0.945);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +9,52 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+nav {
+  width: 83%;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  z-index: 2;
+  border-radius: 8px;
+}
+
+.navChange {
+  background-color: rgb(0, 0, 0);
+  top: 0;
+}
+
+li {
+  cursor: pointer;
+}
+
+li:hover {
+  color: rgba(255, 255, 255, 0.612);
+}
+
+summary {
+  font-size: 18px;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+@media screen and (min-width: 769px) and (max-width: 1023px)  {
+  nav {
+    width: 82%;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px)  {
+  nav {
+    width: 81%;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px)  {
+  nav {
+    width: 79%;
+  }
 }
