--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
+* {
+  font-family: 'Inter', sans-serif;
+}
+
 body {
   margin: 10px 10px 0 10px;
   padding: 0;
   background-color: rgba(0, 0, 0, 0.945);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -34,12 +35,6 @@ li:hover {
 summary {
   font-size: 18px;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 
 @media screen and (min-width: 769px) and (max-width: 1023px)  {
   nav {
